--- a/share/app/build.gradle
+++ b/share/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.facebook.fresco:fresco:0.9.0'
+    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
 }
 
 android {
