--- a/share/app/src/main/AndroidManifest.xml
+++ b/share/app/src/main/AndroidManifest.xml
@@ -115,10 +115,6 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".controller.activity.juhe.JokeTopLineActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
             android:name=".controller.activity.web.WebViewActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
@@ -149,23 +145,19 @@
                 android:resource="@xml/bdp_update_filepaths" />
         </provider>
 
-        <!-- 有米SDK为了兼容Android N应用间共享文件行为变更而需要配置的FileProvider-->
-        <!-- 这里主要为授予有米SDK拥有打开apk安装界面的功能 -->
-        <!-- 请务必修改 android:authorities 为贵应用的标识，一般为 包名.fileProvider -->
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.qin.tao.share.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
-            <!--有米-->
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_provider" />
         </provider>
 
-        <!-- 有米渠道号(可选配置) 渠道号不能带空格，类型为整数 -->
         <meta-data
-            android:name="YOUMI_CHANNEL"
+            android:name="MI_CHANNEL"
             android:value="0" />
 
         <!-- 【必须】 (2.30及以上版新增)展示通知的activity -->
