--- a/share/app/build.gradle
+++ b/share/app/build.gradle
@@ -1,69 +1,40 @@
 apply plugin: 'com.android.application'
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
-    }
-}
-
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
-}
-
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile  name: 'autoupdatesdk-release', ext: 'aar'
-    compile name: 'YoumiSdk_v7.3.0_2017-06-02', ext: 'aar'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.facebook.fresco:fresco:0.9.0'
-    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
-}
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.1"
-
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     compileOptions {
         encoding "UTF-8"
     }
 
     //更改生成的apk名字
-    android.applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            def file = output.outputFile
-            output.outputFile = new File(file.parent, "share-" + defaultConfig.versionName + "-" + defaultConfig.versionCode + ".apk")
-        }
-    }
+//    android.applicationVariants.all { variant ->
+//        variant.outputs.each { output ->
+//            def file = output.outputFile
+//            output.outputFile = new File(file.parent, "share-" + defaultConfig.versionName + "-" + defaultConfig.versionCode + ".apk")
+//        }
+//    }
 
     defaultConfig {
         applicationId "com.qin.tao.share"
         minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 11
-        versionName "1.1"
-        multiDexEnabled true
+        targetSdkVersion 26
+        versionCode 3
+        versionName "3.0"
         //配置.统计
         buildConfigField "String", "MTA", "\"AB3K87XE2PYL\""
-        jackOptions {
-            enabled false
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //选择要添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+            manifestPlaceholders = [
+                    XG_ACCESS_ID : "2100297244",
+                    XG_ACCESS_KEY: "AE238EWJ14KJ",
+            ]
         }
     }
-    //执行lint检查，有任何的错误或者警告提示，都会终止构建，我们可以将其关掉。
-    lintOptions {
-        abortOnError false
-    }
-
 
     //以下为签名打包
     signingConfigs {
@@ -84,7 +55,7 @@ android {
             debuggable true
             //混淆
             minifyEnabled false
-            //Zipalign优化
+//            //Zipalign优化
             zipAlignEnabled true
             // 移除无用的resource文件
             shrinkResources false
@@ -97,7 +68,7 @@ android {
             debuggable false
             //混淆
             minifyEnabled false
-            //Zipalign优化
+//            //Zipalign优化
             zipAlignEnabled true
             // 移除无用的resource文件
             shrinkResources false
@@ -109,5 +80,26 @@ android {
     }
 
 }
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+//    compile  name: 'autoupdatesdk-release', ext: 'aar'
+//    compile name: 'YoumiSdk_v7.3.0_2017-06-02', ext: 'aar'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    testCompile 'junit:junit:4.12'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.facebook.fresco:fresco:0.9.0'
+    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
+
+    //根据需求选择对应的版本号
+    compile 'com.tencent.xinge:xinge:3.1.2-beta'
+    compile 'com.tencent.wup:wup:1.0.0.E-alpha'
+    compile 'com.tencent.mid:mid:3.9.0-alpha'
+}
+
 
 
