--- a/share/app/src/main/AndroidManifest.xml
+++ b/share/app/src/main/AndroidManifest.xml
@@ -1,65 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.qin.tao.share"
-    android:versionCode="11"
-    android:versionName="1.1">
+    package="com.qin.tao.share">
 
+    <!-- <uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+     <uses-permission android:name="android.permission.WAKE_LOCK" />
+     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+     <uses-permission android:name="android.permission.READ_CONTACTS" />
+     <uses-permission android:name="android.permission.GET_TASKS" />
+     &lt;!&ndash; To auto-complete the email text field in the login form with the user's emails &ndash;&gt;
+     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+     <uses-permission android:name="android.permission.READ_PROFILE" />
+     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+     &lt;!&ndash; 二维码 &ndash;&gt;
+     <uses-permission android:name="android.permission.CAMERA" />
+
+     <uses-feature android:name="android.hardware.camera" />
+     <uses-feature android:name="android.hardware.camera.autofocus" />
+
+     <uses-permission android:name="android.permission.FLASHLIGHT" />
+     &lt;!&ndash; 震动 &ndash;&gt;
+     <uses-permission android:name="android.permission.VIBRATE" />
+     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />-->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_CALL_LOG" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
-    <!-- 二维码 -->
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
-
-    <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <!-- 震动 -->
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-
-    <!-- 【常用】 信鸽SDK所需权限 -->
-    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
-
 
     <application
         android:name=".app.base.BaseApplication"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data
-            android:name="BDAPPID"
-            android:value="10203036" />
-        <meta-data
-            android:name="BDAPPKEY"
-            android:value="IiMpRuNpbWz4csmIeqycvEYS7hhtReiY" />
-
         <activity
-            android:name=".controller.activity.welcome.WelcomeActivity"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"
+            android:name="com.qin.tao.share.controller.activity.welcome.WelcomeActivity"
             android:theme="@style/Theme.AppStartLoadTranslucent">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -68,9 +60,12 @@
         </activity>
         <activity
             android:name=".controller.activity.MainActivity"
-            android:exported="true"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait">
+
+
+        </activity>
+
 
         <activity
             android:name=".controller.activity.gank.WelFareActivity"
@@ -119,6 +114,11 @@
             android:exported="true"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".controller.activity.CollectionActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
 
         <activity
             android:name=".controller.activity.ad.RecommendActivity"
@@ -126,132 +126,54 @@
             android:screenOrientation="portrait" />
 
         <!-- 视频组件 -->
-        <activity
-            android:name="ddd.eee.fff.nm.vdo.VideoActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
-            android:resizeableActivity="false"
-            android:screenOrientation="landscape"
-            android:taskAffinity=""
-            android:theme="@android:style/Theme.NoTitleBar" />
+        <!-- <activity
+             android:name="ddd.eee.fff.nm.vdo.VideoActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
+             android:resizeableActivity="false"
+             android:screenOrientation="landscape"
+             android:taskAffinity=""
+             android:theme="@android:style/Theme.NoTitleBar" />-->
 
-        <provider
-            android:name=".app.config.BaiDuProvider"
-            android:authorities="com.qin.tao.share.fileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <!-- 百度-->
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/bdp_update_filepaths" />
-        </provider>
+        <!-- <provider
+             android:name=".app.config.BaiDuProvider"
+             android:authorities="com.qin.tao.share.fileProvider"
+             android:exported="false"
+             android:grantUriPermissions="true">
+             &lt;!&ndash; 百度&ndash;&gt;
+            &lt;!&ndash; <meta-data
+                 android:name="android.support.FILE_PROVIDER_PATHS"
+                 android:resource="@xml/bdp_update_filepaths" />&ndash;&gt;
+         </provider>
+ -->
 
+        <!-- <provider
+             android:name="android.support.v4.content.FileProvider"
+             android:authorities="com.qin.tao.share.fileProvider"
+             android:exported="false"
+             android:grantUriPermissions="true">
+             <meta-data
+                 android:name="android.support.FILE_PROVIDER_PATHS"
+                 android:resource="@xml/file_provider" />
+         </provider>
 
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.qin.tao.share.fileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_provider" />
-        </provider>
-
-        <meta-data
-            android:name="MI_CHANNEL"
-            android:value="0" />
-
-        <!-- 【必须】 (2.30及以上版新增)展示通知的activity -->
-        <!-- 【注意】 如果被打开的activity是启动模式为SingleTop，SingleTask或SingleInstance，请根据通知的异常自查列表第8点处理-->
-        <activity
-            android:name="com.tencent.android.tpush.XGPushActivity"
-            android:exported="false"
-            android:theme="@android:style/Theme.Translucent">
-            <intent-filter>
-                <!-- 若使用AndroidStudio，请设置android:name="android.intent.action"-->
-                <action android:name="android.intent.action" />
-            </intent-filter>
-        </activity>
-
-        <!-- 【必须】 信鸽receiver广播接收 -->
-        <receiver
-            android:name="com.tencent.android.tpush.XGPushReceiver"
-            android:process=":xg_service_v3">
-            <intent-filter android:priority="0x7fffffff">
-
-                <!-- 【必须】 信鸽SDK的内部广播 -->
-                <action android:name="com.tencent.android.tpush.action.SDK" />
-                <action android:name="com.tencent.android.tpush.action.INTERNAL_PUSH_MESSAGE" />
-                <!-- 【必须】 系统广播：网络切换 -->
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-
-                <!-- 【可选】 系统广播：开屏 -->
-                <action android:name="android.intent.action.USER_PRESENT" />
-
-                <!-- 【可选】 一些常用的系统广播，增强信鸽service的复活机会，请根据需要选择。当然，你也可以添加APP自定义的一些广播让启动service -->
-                <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-            </intent-filter>
-            <!-- 【可选】 usb相关的系统广播，增强信鸽service的复活机会，请根据需要添加 -->
-            <intent-filter android:priority="0x7fffffff">
-                <action android:name="android.intent.action.MEDIA_UNMOUNTED" />
-                <action android:name="android.intent.action.MEDIA_REMOVED" />
-                <action android:name="android.intent.action.MEDIA_CHECKING" />
-                <action android:name="android.intent.action.MEDIA_EJECT" />
-
-                <data android:scheme="file" />
-            </intent-filter>
-        </receiver>
-
-        <!-- 【必须】 信鸽service -->
-        <service
-            android:name="com.tencent.android.tpush.service.XGPushServiceV3"
-            android:exported="true"
-            android:persistent="true"
-            android:process=":xg_service_v3" />
-
-        <!-- 【必须】 增强xg_service存活率  -->
-        <service
-            android:name="com.tencent.android.tpush.service.XGDaemonService"
-            android:process=":xg_service_v3" />
+         <meta-data
+             android:name="MI_CHANNEL"
+             android:value="0" />-->
 
 
         <receiver
-            android:name=".controller.receiver.MessageReceiver"
+            android:name="com.qin.tao.share.controller.receiver.MessageReceiver"
             android:exported="true">
             <intent-filter>
+
                 <!--  接收消息透传 -->
                 <action android:name="com.tencent.android.tpush.action.PUSH_MESSAGE" />
                 <!--   监听注册、反注册、设置/删除标签、通知被点击等处理结果-->
                 <action android:name="com.tencent.android.tpush.action.FEEDBACK" />
             </intent-filter>
         </receiver>
-
-        <!-- 【必须】 【注意】authorities修改为 包名.AUTH_XGPUSH, 如demo的包名为：com.qq.xgdemo-->
-        <provider
-            android:name="com.tencent.android.tpush.XGPushProvider"
-            android:authorities="com.qin.tao.share.AUTH_XGPUSH"
-            android:exported="true" />
-
-        <!-- 【必须】 【注意】authorities修改为 包名.TPUSH_PROVIDER, 如demo的包名为：com.qq.xgdemo-->
-        <provider
-            android:name="com.tencent.android.tpush.SettingsContentProvider"
-            android:authorities="com.qin.tao.share.TPUSH_PROVIDER"
-            android:exported="false" />
-
-        <!-- 【必须】 【注意】authorities修改为 包名.TENCENT.MID.V3, 如demo的包名为：com.qq.xgdemo-->
-        <provider
-            android:name="com.tencent.mid.api.MidProvider"
-            android:authorities="com.qin.tao.share.TENCENT.MID.V3"
-            android:exported="true" />
-        <!-- 【必须】 请修改为APP的AccessId，“21”开头的10位数字，中间没空格 -->
-        <meta-data
-            android:name="XG_V2_ACCESS_ID"
-            android:value="2100267456" />
-        <!-- 【必须】 请修改为APP的AccessKey，“A”开头的12位字符串，中间没空格 -->
-        <meta-data
-            android:name="XG_V2_ACCESS_KEY"
-            android:value="AUE8E6FJ866D" />
     </application>
+
+
 
 </manifest>
